hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_current.php
<?php
$list = new SplDoublyLinkedList();
var_dump($list->current());
?>